--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,14 @@
 @tailwind components;
 @tailwind utilities;
 
+.contact_us__container {
+  display: flex;
+  flex-direction: column;
+}
+
 .made_by__name {
   color: white;
   font-weight: 600;
-  /* font-weight: bold; */
 }
 
 .app__apni_academy__container {
